--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Small web tools for musicians",
   "main": "notes.js",
   "scripts": {
-    "test": "mocha --reporter spec"
+    "test": "mocha --reporter spec",
+    "cover": "node ./node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,8 @@
   "homepage": "https://github.com/nocarroll/music-tools#readme",
   "devDependencies": {
     "chai": "^4.1.0",
+    "coveralls": "^2.13.1",
+    "istanbul": "^0.4.5",
     "mocha": "^3.4.2"
   }
 }
